<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/parent_margin"
        android:background="@color/secondary_background"
        android:orientation="vertical"
        android:padding="@dimen/parent_padding">

        <ImageView
            style="@style/imageViewStyle"
            android:src="@drawable/iq_logo" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:textColor="@android:color/black" />

        <TextView
            style="@style/QuestionHeaderStyle"
            android:layout_marginTop="@dimen/margin_between_views"
            android:text="@string/question_1_title" />

        <TextView
            style="@style/QuestionTextStyle"
            android:layout_marginTop="@dimen/margin_question_text"
            android:text="@string/question_1_text" />

        <CheckBox
            style="@style/checkBoxStyle"
            android:id="@+id/question_1_answer_a_checkbox"
            android:text="@string/question_1_answer_a" />

        <CheckBox
            style="@style/checkBoxStyle"
            android:id="@+id/question_1_answer_b_checkbox"
            android:text="@string/question_1_answer_b" />

        <CheckBox
            style="@style/checkBoxStyle"
            android:id="@+id/question_1_answer_c_checkbox"
            android:text="@string/question_1_answer_c" />

        <TextView
            style="@style/QuestionHeaderStyle"
            android:layout_marginTop="@dimen/margin_between_views"
            android:text="@string/question_2_title" />

        <TextView
            style="@style/QuestionTextStyle"
            android:layout_marginTop="@dimen/margin_question_text"
            android:text="@string/question_2_text" />

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question_2_text_2" />

        <RadioGroup
            style="@style/radioGroupStyle"
            android:orientation="vertical">

            <RadioButton
                style="@style/radioButtonStyle"
                android:id="@+id/question_2_answer_a"
                android:text="@string/question_2_answer_a" />

            <RadioButton
                style="@style/radioButtonStyle"
                android:id="@+id/question_2_answer_b"
                android:text="@string/question_2_answer_b" />

            <RadioButton
                style="@style/radioButtonStyle"
                android:id="@+id/question_2_answer_c"
                android:text="@string/question_2_answer_c" />

        </RadioGroup>

        <TextView
            style="@style/QuestionHeaderStyle"
            android:layout_marginTop="@dimen/margin_between_views"
            android:text="@string/question_3_title" />

        <TextView
            style="@style/QuestionTextStyle"
            android:layout_marginTop="@dimen/margin_question_text"
            android:text="@string/question_3_text" />

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question_3_text_2" />

        <RadioGroup
            style="@style/radioGroupStyle"
            android:orientation="vertical">

            <RadioButton
                style="@style/radioButtonStyle"
                android:id="@+id/question_3_answer_a"
                android:text="@string/question_3_answer_a" />

            <RadioButton
                style="@style/radioButtonStyle"
                android:id="@+id/question_3_answer_b"
                android:text="@string/question_3_answer_b" />

            <RadioButton
                style="@style/radioButtonStyle"
                android:id="@+id/question_3_answer_c"
                android:text="@string/question_3_answer_c" />

        </RadioGroup>

        <TextView
            style="@style/QuestionHeaderStyle"
            android:layout_marginTop="@dimen/margin_between_views"
            android:text="@string/question_4_title" />

        <TextView
            style="@style/QuestionTextStyle"
            android:layout_marginTop="@dimen/margin_question_text"
            android:text="@string/question_4_text" />

        <RadioGroup
            style="@style/radioGroupStyle"
            android:orientation="vertical">

            <RadioButton
                style="@style/radioButtonStyle"
                android:id="@+id/question_4_answer_a"
                android:text="@string/question_4_answer_a" />

            <RadioButton
                style="@style/radioButtonStyle"
                android:id="@+id/question_4_answer_b"
                android:text="@string/question_4_answer_b" />

            <RadioButton
                style="@style/radioButtonStyle"
                android:id="@+id/question_4_answer_c"
                android:text="@string/question_4_answer_c" />

        </RadioGroup>

        <TextView
            style="@style/QuestionHeaderStyle"
            android:layout_marginTop="@dimen/margin_between_views"
            android:text="@string/question_5_title" />

        <TextView
            style="@style/QuestionTextStyle"
            android:layout_marginTop="@dimen/margin_question_text"
            android:text="@string/question_5_text" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/question_5" />


        <RadioGroup
            style="@style/radioGroupStyle"
            android:orientation="horizontal">

            <RadioButton
                style="@style/radioButtonStyle"
                android:id="@+id/question_5_answer_a"
                android:text="@string/question_5_answer_a" />

            <RadioButton
                style="@style/radioButtonStyle"
                android:id="@+id/question_5_answer_b"
                android:text="@string/question_5_answer_b" />

            <RadioButton
                style="@style/radioButtonStyle"
                android:id="@+id/question_5_answer_c"
                android:text="@string/question_5_answer_c" />

            <RadioButton
                style="@style/radioButtonStyle"
                android:id="@+id/question_5_answer_d"
                android:text="@string/question_5_answer_d" />

        </RadioGroup>

        <TextView
            style="@style/QuestionHeaderStyle"
            android:layout_marginTop="@dimen/margin_between_views"
            android:text="@string/question_6_title" />

        <TextView
            style="@style/QuestionTextStyle"
            android:layout_marginTop="@dimen/margin_question_text"
            android:text="@string/question_6_text" />

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question_6_text_2" />

        <EditText
            android:id="@+id/question_6_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/type_answer"
            android:inputType="numberDecimal"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/results_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_between_views"
            android:onClick="submitAnswers"
            android:text="@string/results_button" />

        <TextView
            style="@style/resultsMessageStyle"
            android:id="@+id/results_text_view"
            android:text="" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_between_views"
            android:orientation="horizontal">

            <Button
                android:id="@+id/try_again_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/margin_between_views"
                android:onClick="resetAnswers"
                android:text="@string/try_again_button" />

            <Button
                android:id="@+id/share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/margin_between_views"
                android:onClick="shareResults"
                android:text="@string/share_button" />


        </RelativeLayout>

    </LinearLayout>

</ScrollView>
